--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.2.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -18,10 +19,11 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.446.0",
-    "mongoose": "^8.7.0",
+    "mongoose": "^8.8.0",
     "next": "^14.2.6",
     "react": "^18",
     "react-dom": "^18",
