feat(vendor): :white_check_mark:

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "conventionalCommits.scopes": ["vendor"]
   // "files.autoSave": "afterDelay",
   // "files.autoSaveDelay": 1000,
   // "editor.formatOnSave": true,
