feat(contactpage): :fire:

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "conventionalCommits.scopes": ["vendor"]
+  "conventionalCommits.scopes": ["vendor", "contactpage"]
   // "files.autoSave": "afterDelay",
   // "files.autoSaveDelay": 1000,
   // "editor.formatOnSave": true,
